[gd_scene load_steps=18 format=4 uid="uid://dy1npxh34w1iv"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_0c7c8"]
[ext_resource type="Texture2D" uid="uid://c57gkbafwspi0" path="res://graphics/ground/stones.png" id="2_4xon6"]
[ext_resource type="PackedScene" uid="uid://c68hekvdr4nls" path="res://scenes/objects/gate.tscn" id="2_f82kk"]
[ext_resource type="Texture2D" uid="uid://btxnottno6vbi" path="res://graphics/decals/dirt_patch.png" id="3_gk3fj"]
[ext_resource type="PackedScene" uid="uid://fj3ijajhbm6q" path="res://scenes/player/player.tscn" id="4_t7rur"]
[ext_resource type="Texture2D" uid="uid://da161yrmc0wie" path="res://graphics/decals/moss/moss_1.png" id="4_tqwt6"]
[ext_resource type="Texture2D" uid="uid://2awgfarry12t" path="res://graphics/decals/moss/moss_2.png" id="5_5j322"]
[ext_resource type="Texture2D" uid="uid://cct34upxk8v7s" path="res://graphics/decals/moss/moss_3.png" id="6_sm1gb"]
[ext_resource type="Texture2D" uid="uid://2u1rcl6coeea" path="res://graphics/decals/moss/moss_4.png" id="7_y1xk6"]
[ext_resource type="Texture2D" uid="uid://be82od8clh7yg" path="res://graphics/tilesets/outside_walls.png" id="8_s6hib"]
[ext_resource type="Texture2D" uid="uid://d0v6egy3wblfb" path="res://graphics/tilesets/soil.png" id="9_pn31y"]
[ext_resource type="PackedScene" uid="uid://d2pobv3yq6shv" path="res://scenes/houses/house.tscn" id="10_tvmiu"]
[ext_resource type="PackedScene" uid="uid://bowyphdktf6vq" path="res://scenes/objects/steam_vent.tscn" id="11_pnc47"]
[ext_resource type="PackedScene" uid="uid://dfgmfgpokb2n" path="res://scenes/objects/light_fan_animation.tscn" id="12_sk8nu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gk5yr"]
resource_name = "walls"
texture = ExtResource("8_s6hib")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3hgem"]
resource_name = "soil"
texture = ExtResource("9_pn31y")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_1av72"]
tile_size = Vector2i(390, 390)
sources/0 = SubResource("TileSetAtlasSource_gk5yr")
sources/1 = SubResource("TileSetAtlasSource_3hgem")

[node name="Level" type="Node2D"]
script = ExtResource("1_0c7c8")

[node name="Ground" type="Node2D" parent="."]

[node name="Soil" type="Sprite2D" parent="Ground"]
modulate = Color(0.72549, 0.682353, 0.713726, 1)
texture_repeat = 3
position = Vector2(680, 1411)
scale = Vector2(0.60106, 0.60106)
texture = ExtResource("2_4xon6")
region_enabled = true
region_rect = Rect2(54000, 3000, 20000, 10000)

[node name="Decoration" type="Sprite2D" parent="Ground"]
modulate = Color(1, 0.921569, 0.6, 0.803922)
position = Vector2(717, 3553)
texture = ExtResource("3_gk3fj")

[node name="TileMap" type="TileMapLayer" parent="Ground"]
tile_set = SubResource("TileSet_1av72")

[node name="Soil" type="TileMapLayer" parent="Ground/TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD9////AQABAAIAAAD8////AQABAAIAAAD7////AQABAAIAAAD6////AQABAAIAAAD5////AQABAAIAAAD4////AQABAAIAAAD3////AQAAAAIAAAD3//7/AQAAAAEAAAD4//7/AQABAAEAAAD5//7/AQABAAEAAAD6//7/AQABAAEAAAD7//7/AQABAAEAAAD8//7/AQABAAEAAAD9//7/AQABAAEAAAD9//3/AQABAAEAAAD8//3/AQABAAEAAAD7//3/AQABAAEAAAD6//3/AQABAAEAAAD5//3/AQABAAEAAAD4//3/AQABAAEAAAD3//3/AQAAAAEAAAD3//z/AQAAAAAAAAD4//z/AQABAAAAAAD5//z/AQABAAAAAAD6//z/AQABAAAAAAD7//z/AQABAAAAAAD8//z/AQABAAAAAAD9//z/AQABAAAAAAD+//z/AQABAAAAAAD///z/AQABAAAAAAAAAPz/AQABAAAAAAABAPz/AQABAAAAAAACAPz/AQABAAAAAAADAPz/AQABAAAAAAAEAPz/AQABAAAAAAAFAPz/AQABAAAAAAAGAPz/AQABAAAAAAAHAPz/AQABAAAAAAAIAPz/AQABAAAAAAAJAPz/AQABAAAAAAAKAPz/AQABAAAAAAALAPz/AQABAAAAAAALAP3/AQABAAEAAAAMAP3/AQABAAEAAAAKAP3/AQABAAEAAAAJAP3/AQABAAEAAAAIAP3/AQABAAEAAAAHAP3/AQABAAEAAAAGAP3/AQABAAEAAAAFAP3/AQABAAEAAAAFAP7/AQABAAEAAAAGAP7/AQABAAEAAAAHAP7/AQABAAEAAAAIAP7/AQABAAEAAAAJAP7/AQABAAEAAAAKAP7/AQABAAEAAAALAP7/AQABAAEAAAAMAP7/AQABAAEAAAAMAP//AQABAAEAAAALAP//AQABAAIAAAAKAP//AQABAAIAAAAJAP//AQABAAIAAAAIAP//AQABAAIAAAAHAP//AQABAAIAAAAGAP//AQABAAIAAAAFAP//AQABAAIAAAAMAPz/AQABAAAAAAANAPz/AQABAAAAAAAOAPz/AQABAAAAAAAPAPz/AQABAAAAAAAQAPz/AQABAAAAAAARAPz/AQACAAAAAAARAP3/AQACAAEAAAARAP7/AQACAAEAAAARAP//AQACAAEAAAARAAAAAQACAAEAAAARAAEAAQACAAEAAAARAAIAAQACAAEAAAARAAMAAQACAAEAAAARAAQAAQACAAEAAAARAAUAAQACAAEAAAARAAYAAQACAAEAAAARAAcAAQACAAEAAAARAAgAAQACAAEAAAARAAkAAQACAAEAAAARAAoAAQACAAEAAAARAAsAAQACAAIAAAAQAAoAAQABAAEAAAAPAAoAAQABAAEAAAAOAAoAAQABAAEAAAANAAoAAQABAAEAAAAMAAoAAQAAAAEAAAAMAAkAAQAAAAEAAAAMAAgAAQAAAAEAAAAMAAcAAQAAAAEAAAANAAcAAQABAAEAAAANAAYAAQABAAEAAAANAAUAAQABAAEAAAANAAQAAQABAAEAAAANAAMAAQABAAEAAAANAAIAAQABAAEAAAANAAEAAQABAAEAAAANAAAAAQABAAEAAAANAP//AQABAAEAAAAMAAAAAQAAAAEAAAAMAAQAAQAAAAEAAAAMAAUAAQAAAAEAAAAMAAYAAQAAAAEAAAAMAAMAAQAAAAEAAAAMAAIAAQAAAAEAAAAMAAEAAQAAAAEAAAANAP7/AQABAAEAAAANAP3/AQABAAEAAAAOAP3/AQABAAEAAAAOAP7/AQABAAEAAAAOAP//AQABAAEAAAAPAP7/AQABAAEAAAAPAP3/AQABAAEAAAAQAP3/AQABAAEAAAAQAP7/AQABAAEAAAAPAP//AQABAAEAAAAQAP//AQABAAEAAAAQAAAAAQABAAEAAAAQAAEAAQABAAEAAAAPAAEAAQABAAEAAAAOAAEAAQABAAEAAAAOAAAAAQABAAEAAAAPAAAAAQABAAEAAAAOAAIAAQABAAEAAAAPAAIAAQABAAEAAAAPAAMAAQABAAEAAAAOAAMAAQABAAEAAAAQAAIAAQABAAEAAAAQAAMAAQABAAEAAAAQAAQAAQABAAEAAAAPAAcAAQABAAEAAAAPAAYAAQABAAEAAAAPAAUAAQABAAEAAAAPAAQAAQABAAEAAAAOAAQAAQABAAEAAAAOAAUAAQABAAEAAAAOAAYAAQABAAEAAAAOAAcAAQABAAEAAAAOAAgAAQABAAEAAAANAAgAAQABAAEAAAANAAkAAQABAAEAAAAOAAkAAQABAAEAAAAPAAkAAQABAAEAAAAPAAgAAQABAAEAAAAQAAgAAQABAAEAAAAQAAcAAQABAAEAAAAQAAYAAQABAAEAAAAQAAUAAQABAAEAAAAQAAkAAQABAAEAAAAMAAsAAQAAAAIAAAAQAAsAAQABAAIAAAAPAAsAAQABAAIAAAAOAAsAAQABAAIAAAANAAsAAQABAAIAAAA=")
tile_set = SubResource("TileSet_1av72")

[node name="Walls" type="TileMapLayer" parent="Ground/TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD3////AAAAAAAAAAD4////AAABAAAAAAD5////AAABAAAAAAD6////AAABAAAAAAD7////AAABAAAAAAD8////AAACAAAAAAAHAP//AAABAAAAAAAIAP//AAABAAAAAAAJAP//AAABAAAAAAAKAP//AAABAAAAAAALAP//AAABAAAAAAAMAP//AAACAAEAAAAGAP//AAABAAIAAAAGAP7/AAAAAAIAAAAGAP3/AAAAAAEAAAAMAAAAAAAAAAIAAAAMAAEAAAAAAAIAAAAMAAIAAAAAAAIAAAAMAAMAAAAAAAIAAAAMAAQAAAAAAAIAAAAMAAUAAAAAAAIAAAAMAAYAAAAAAAIAAAAMAAcAAAAAAAIAAAAMAAgAAAAAAAIAAAAMAAkAAAAAAAMAAAA=")
tile_set = SubResource("TileSet_1av72")

[node name="Moss1" type="Sprite2D" parent="Ground"]
modulate = Color(0.639216, 0.623529, 0.560784, 0.717647)
position = Vector2(3678, -44)
rotation = -0.359538
texture = ExtResource("4_tqwt6")

[node name="Moss2" type="Sprite2D" parent="Ground"]
modulate = Color(0.639216, 0.623529, 0.560784, 0.717647)
position = Vector2(4711, 1169)
texture = ExtResource("5_5j322")

[node name="Moss3" type="Sprite2D" parent="Ground"]
modulate = Color(0.639216, 0.623529, 0.560784, 0.717647)
position = Vector2(4710, 2185)
rotation = -0.359538
texture = ExtResource("6_sm1gb")

[node name="Moss5" type="Sprite2D" parent="Ground"]
modulate = Color(0.639216, 0.623529, 0.560784, 0.717647)
position = Vector2(4702, -11)
texture = ExtResource("6_sm1gb")

[node name="Moss4" type="Sprite2D" parent="Ground"]
modulate = Color(0.639216, 0.623529, 0.560784, 0.717647)
position = Vector2(2622, -19)
texture = ExtResource("7_y1xk6")

[node name="House" parent="Ground" instance=ExtResource("10_tvmiu")]
position = Vector2(-2330, 3374)
rotation = 3.14159

[node name="SteamVent" parent="Ground" instance=ExtResource("11_pnc47")]
position = Vector2(-25, 881)

[node name="LightFanAnimation" parent="Ground" instance=ExtResource("12_sk8nu")]
position = Vector2(-4090, 2092)
autoplay = "default"

[node name="Gate" parent="." instance=ExtResource("2_f82kk")]
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("4_t7rur")]
position = Vector2(669, 524)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true

[node name="Projectiles" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[connection signal="player_entered" from="Ground/House" to="." method="_on_house_player_entered"]
[connection signal="player_exited" from="Ground/House" to="." method="_on_house_player_exited"]
[connection signal="player_entered_gate" from="Gate" to="." method="_on_gate_player_entered_gate"]
[connection signal="player_exited_gate" from="Gate" to="." method="_on_gate_player_exited_gate"]
[connection signal="grenade_fired" from="Player" to="." method="_on_player_grenade_fired"]
[connection signal="laser_fired" from="Player" to="." method="_on_player_laser_fired"]
